Linked case study to HW 20

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <p>
                         Ticket stubs are as easy to lose as a lone sock. Tick-It helps you safely record and store memories from all of your favorite events. Never lose a memory again!
                     </p>
-                    <button>
-                        View Project
-                    </button>
+                    <a href="...">
+                        <button class="btn btn-primary btn-lg">View Project</button>
+                    </a>
                 </div>
                 <div id="pic2">
                     <img src="images/Home Page - v1.png" alt="">
@@ -106,9 +106,9 @@
                     <p>
                         People have needed a safer and simpler way to share music from afar. With Stage Pass, you are able to experience your favorite music and artists with your friends in a new intractable, digital form factor!
                     </p>
-                    <button>
-                        View Project
-                    </button>
+                    <a href="https://benjaminepreiss.github.io/UX_UI_HW_20/">
+                        <button class="btn btn-primary btn-lg">View Project</button>
+                    </a>
                 </div>
             </div>
             <h3>
